--- a/SRGAN.ipynb
+++ b/SRGAN.ipynb
@@ -17,7 +17,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GXKRpUah8_uF"
+        "id": "GXKRpUah8_uF",
+        "outputId": "3e783b74-4b9c-461b-c607-0c3183f71ad3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!apt-get install -y -qq software-properties-common python-software-properties module-init-tools\n",
@@ -44,8 +48,26 @@
         "import sys\n",
         "import tensorflow as tf"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "E: Package 'python-software-properties' has no installation candidate\n",
+            "Selecting previously unselected package google-drive-ocamlfuse.\n",
+            "(Reading database ... 146442 files and directories currently installed.)\n",
+            "Preparing to unpack .../google-drive-ocamlfuse_0.7.24-0ubuntu1~ubuntu18.04.1_amd64.deb ...\n",
+            "Unpacking google-drive-ocamlfuse (0.7.24-0ubuntu1~ubuntu18.04.1) ...\n",
+            "Setting up google-drive-ocamlfuse (0.7.24-0ubuntu1~ubuntu18.04.1) ...\n",
+            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n",
+            "Please, open the following URL in a web browser: https://accounts.google.com/o/oauth2/auth?client_id=32555940559.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive&response_type=code&access_type=offline&approval_prompt=force\n",
+            "··········\n",
+            "Please, open the following URL in a web browser: https://accounts.google.com/o/oauth2/auth?client_id=32555940559.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive&response_type=code&access_type=offline&approval_prompt=force\n",
+            "Please enter the verification code: Access token retrieved correctly.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -153,7 +175,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1b872e11-8672-4440-e029-41e5677d1c1e"
+        "outputId": "2d13af3f-c4d1-4f8d-940b-d47f17640a96"
       },
       "source": [
         "# Load the Drive helper and mount\n",
@@ -161,7 +183,7 @@
         "# This will prompt for authorization.\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +214,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_sx63VPiVHT-"
+        "id": "_sx63VPiVHT-",
+        "outputId": "ab8d516b-07b9-45e6-b214-6a4a702e61fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "import sys\n",
@@ -203,13 +229,33 @@
         "%cd SRGAN_Test/\n",
         "!pwd  "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'SRGAN_Test'...\n",
+            "remote: Enumerating objects: 22, done.\u001b[K\n",
+            "remote: Counting objects: 100% (22/22), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (22/22), done.\u001b[K\n",
+            "remote: Total 144 (delta 11), reused 0 (delta 0), pack-reused 122\u001b[K\n",
+            "Receiving objects: 100% (144/144), 84.88 KiB | 9.43 MiB/s, done.\n",
+            "Resolving deltas: 100% (71/71), done.\n",
+            "/content/SRGAN_Test\n",
+            "/content/SRGAN_Test\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BDRTN4ZlBpEd"
+        "id": "BDRTN4ZlBpEd",
+        "outputId": "901b3b5a-2b1e-4cbc-e5cd-a66566a98cd3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!wget http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
@@ -219,7 +265,145 @@
         "!rm DIV2K_train_HR.zip\n",
         "!rm DIV2K_valid_HR.zip"
       ],
-      "execution_count": null,
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2021-02-22 07:46:16--  http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
+            "Resolving data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)... 129.132.52.178, 2001:67c:10ec:36c2::178\n",
+            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:80... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip [following]\n",
+            "--2021-02-22 07:46:16--  https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
+            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 3530603713 (3.3G) [application/zip]\n",
+            "Saving to: ‘DIV2K_train_HR.zip’\n",
+            "\n",
+            "DIV2K_train_HR.zip  100%[===================>]   3.29G  20.0MB/s    in 2m 57s  \n",
+            "\n",
+            "2021-02-22 07:49:13 (19.1 MB/s) - ‘DIV2K_train_HR.zip’ saved [3530603713/3530603713]\n",
+            "\n",
+            "--2021-02-22 07:49:13--  http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip\n",
+            "Resolving data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)... 129.132.52.178, 2001:67c:10ec:36c2::178\n",
+            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:80... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip [following]\n",
+            "--2021-02-22 07:49:14--  https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip\n",
+            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 448993893 (428M) [application/zip]\n",
+            "Saving to: ‘DIV2K_valid_HR.zip’\n",
+            "\n",
+            "DIV2K_valid_HR.zip  100%[===================>] 428.19M  19.4MB/s    in 24s     \n",
+            "\n",
+            "2021-02-22 07:49:38 (18.1 MB/s) - ‘DIV2K_valid_HR.zip’ saved [448993893/448993893]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Km02Cbk71Ryd"
+      },
+      "source": [
+        "臨時操作 - 複製下載的訓練資料到 google 雲端"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A7XOpIRkznmZ"
+      },
+      "source": [
+        "!cp -r data/DIV2K_train_HR /content/drive/MyDrive/SRGAN/data/DIV2K_train_HR\n",
+        "!cp -r data/DIV2K_valid_HR /content/drive/MyDrive/SRGAN/data/DIV2K_valid_HR"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g0X95dB-t07s"
+      },
+      "source": [
+        "常數設定"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eUyO2qBfc65g"
+      },
+      "source": [
+        "Path_drive_Base = \"/content/drive/MyDrive/SRGAN/\"\n",
+        "Path_data_Base = Path_drive_Base + \"data/\"\n",
+        "Path_dataInput_Base = \"/content/SRGAN_Test/data/\"\n",
+        "# Path_data_Base = \"/content/SRGAN_Test/data/\"\n",
+        "Path_snapshot = Path_drive_Base + \"snapshots/\"\n",
+        "Gan_model =  \n",
+        "Dis_model ="
+      ],
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TMWPXsQjAns_"
+      },
+      "source": [
+        "!mkdir data"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9ugt6-y3r9tR"
+      },
+      "source": [
+        "Sub_Train = \"01**\" #@param {type:\"string\"}\n",
+        "Sub_Valid = \"080*\" #@param {type:\"string\"}\n",
+        "Source_Train = Path_data_Base + \"DIV2K_train_HR/\" + Sub_Train + \".png\"\n",
+        "Source_Valid = Path_data_Base + \"DIV2K_valid_HR/\" + Sub_Valid + \".png\"\n",
+        "\n",
+        "\n",
+        "Path_train = Path_dataInput_Base + \"DIV2K_train_\" + Sub_Train\n",
+        "Path_valid = Path_dataInput_Base + \"DIV2K_valid_\" + Sub_Valid\n",
+        "!mkdir $Path_train\n",
+        "!mkdir $Path_valid\n",
+        "\n",
+        "Path_train = Path_train + \"/\"\n",
+        "!cp $Source_Train $Path_train\n",
+        "\n",
+        "Path_valid = Path_valid + \"/\"\n",
+        "!cp $Source_Valid $Path_valid\n",
+        "\n",
+        "# Init Date time\n",
+        "from datetime import datetime\n",
+        "now = datetime.now()\n",
+        "Time_Info = datetime.strftime(now,'%Y-%m-%d_%H:%M:%S') \n",
+        "\n",
+        "trainPaht = Path_drive_Base + \"training_results/Train_\"+ Sub_Train + \"_Valid_\" + Sub_Valid\n",
+        "!mkdir $trainPaht\n",
+        "trainPaht = trainPaht + '/' + datetime.strftime(now,'%Y-%m-%d_%H:%M:%S')\n",
+        "!mkdir $trainPaht\n",
+        "trainPaht = trainPaht + '/'\n",
+        "\n",
+        "statisticsPaht = Path_drive_Base + \"statistics/Train_\"+ Sub_Train + \"_Valid_\" + Sub_Valid\n",
+        "!mkdir $statisticsPaht\n",
+        "statisticsPaht = statisticsPaht + '/' + datetime.strftime(now,'%Y-%m-%d_%H:%M:%S')\n",
+        "!mkdir $statisticsPaht\n",
+        "statisticsPaht = statisticsPaht + '/'"
+      ],
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -311,20 +495,9 @@
         "id": "aOh9TfoMlzkU"
       },
       "source": [
-        "# Init Date time\n",
-        "from datetime import datetime\n",
-        "now = datetime.now()\n",
-        "\n",
-        "#Set Training Path\n",
-        "traininPaht = \"/content/drive/MyDrive/SRGAN/training_results/\" + datetime.strftime(now,'%Y-%m-%d_%H:%M:%S') \n",
-        "!mkdir $traininPaht\n",
-        "traininPaht = traininPaht + '/'\n",
-        "\n",
-        "statisticsPaht = \"/content/drive/MyDrive/SRGAN/statistics/\"+datetime.strftime(now,'%Y-%m-%d_%H:%M:%S')\n",
-        "!mkdir $statisticsPaht\n",
-        "statisticsPaht = statisticsPaht + '/'"
+        ""
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,13 +507,13 @@
       },
       "source": [
         "! python train.py \\\n",
-        "  --num_epochs 100 \\\n",
+        "  --num_epochs 5 \\\n",
         "  --use_cuda 1 \\\n",
         "  --batch_size 1 \\\n",
-        "  --snapshots_folder /content/drive/MyDrive/SRGAN/snapshots/ \\\n",
+        "  --snapshots_folder $Path_snapshot \\\n",
         "  --snapshots_train_data Epoch_4_TrainTimes_240000.pth \\\n",
-        "  --train_path /content/SRGAN_Test/data/DIV2K_train_HR/ \\\n",
-        "  --valid_path /content/SRGAN_Test/data/DIV2K_valid_HR/ \\\n",
+        "  --train_path $Path_train \\\n",
+        "  --valid_path $Path_valid \\\n",
         "  --statistics_path $statisticsPaht/ \\\n",
         "  --epochs_path $traininPaht/ \\\n",
         "  --willy_test 0 \\\n",
@@ -390,7 +563,7 @@
       "source": [
         "!rm *.bmp"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     }
   ]
