--- a/SRGAN.ipynb
+++ b/SRGAN.ipynb
@@ -18,10 +18,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "GXKRpUah8_uF",
-        "outputId": "3e783b74-4b9c-461b-c607-0c3183f71ad3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ae4877dc-99ed-4bc5-ac3a-ec079d2ba780"
       },
       "source": [
         "!apt-get install -y -qq software-properties-common python-software-properties module-init-tools\n",
@@ -175,7 +175,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2d13af3f-c4d1-4f8d-940b-d47f17640a96"
+        "outputId": "ec015619-17e8-4ccb-e92b-63dbc7ea93c6"
       },
       "source": [
         "# Load the Drive helper and mount\n",
@@ -215,10 +215,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "_sx63VPiVHT-",
-        "outputId": "ab8d516b-07b9-45e6-b214-6a4a702e61fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6ef52924-9510-4059-ac74-8f6a25c360db"
       },
       "source": [
         "import sys\n",
@@ -235,12 +235,12 @@
           "output_type": "stream",
           "text": [
             "Cloning into 'SRGAN_Test'...\n",
-            "remote: Enumerating objects: 22, done.\u001b[K\n",
-            "remote: Counting objects: 100% (22/22), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (22/22), done.\u001b[K\n",
-            "remote: Total 144 (delta 11), reused 0 (delta 0), pack-reused 122\u001b[K\n",
-            "Receiving objects: 100% (144/144), 84.88 KiB | 9.43 MiB/s, done.\n",
-            "Resolving deltas: 100% (71/71), done.\n",
+            "remote: Enumerating objects: 3, done.\u001b[K\n",
+            "remote: Counting objects: 100% (3/3), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
+            "remote: Total 155 (delta 0), reused 0 (delta 0), pack-reused 152\u001b[K\n",
+            "Receiving objects: 100% (155/155), 84.45 KiB | 10.56 MiB/s, done.\n",
+            "Resolving deltas: 100% (80/80), done.\n",
             "/content/SRGAN_Test\n",
             "/content/SRGAN_Test\n"
           ],
@@ -251,11 +251,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BDRTN4ZlBpEd",
-        "outputId": "901b3b5a-2b1e-4cbc-e5cd-a66566a98cd3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "BDRTN4ZlBpEd"
       },
       "source": [
         "!wget http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
@@ -265,45 +261,8 @@
         "!rm DIV2K_train_HR.zip\n",
         "!rm DIV2K_valid_HR.zip"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "--2021-02-22 07:46:16--  http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
-            "Resolving data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)... 129.132.52.178, 2001:67c:10ec:36c2::178\n",
-            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:80... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip [following]\n",
-            "--2021-02-22 07:46:16--  https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
-            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 3530603713 (3.3G) [application/zip]\n",
-            "Saving to: ‘DIV2K_train_HR.zip’\n",
-            "\n",
-            "DIV2K_train_HR.zip  100%[===================>]   3.29G  20.0MB/s    in 2m 57s  \n",
-            "\n",
-            "2021-02-22 07:49:13 (19.1 MB/s) - ‘DIV2K_train_HR.zip’ saved [3530603713/3530603713]\n",
-            "\n",
-            "--2021-02-22 07:49:13--  http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip\n",
-            "Resolving data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)... 129.132.52.178, 2001:67c:10ec:36c2::178\n",
-            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:80... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip [following]\n",
-            "--2021-02-22 07:49:14--  https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip\n",
-            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 448993893 (428M) [application/zip]\n",
-            "Saving to: ‘DIV2K_valid_HR.zip’\n",
-            "\n",
-            "DIV2K_valid_HR.zip  100%[===================>] 428.19M  19.4MB/s    in 24s     \n",
-            "\n",
-            "2021-02-22 07:49:38 (18.1 MB/s) - ‘DIV2K_valid_HR.zip’ saved [448993893/448993893]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -323,7 +282,7 @@
         "!cp -r data/DIV2K_train_HR /content/drive/MyDrive/SRGAN/data/DIV2K_train_HR\n",
         "!cp -r data/DIV2K_valid_HR /content/drive/MyDrive/SRGAN/data/DIV2K_valid_HR"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -346,10 +305,10 @@
         "Path_dataInput_Base = \"/content/SRGAN_Test/data/\"\n",
         "# Path_data_Base = \"/content/SRGAN_Test/data/\"\n",
         "Path_snapshot = Path_drive_Base + \"snapshots/\"\n",
-        "Gan_model =  \n",
-        "Dis_model ="
+        "Gan_model = 'netG_epoch_8.pth' \n",
+        "Dis_model = 'netD_epoch_8.pth'"
       ],
-      "execution_count": 15,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -360,13 +319,17 @@
       "source": [
         "!mkdir data"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9ugt6-y3r9tR"
+        "id": "9ugt6-y3r9tR",
+        "outputId": "1f88d34a-f362-4372-d013-b5c29362f4d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "Sub_Train = \"01**\" #@param {type:\"string\"}\n",
@@ -391,20 +354,29 @@
         "now = datetime.now()\n",
         "Time_Info = datetime.strftime(now,'%Y-%m-%d_%H:%M:%S') \n",
         "\n",
-        "trainPaht = Path_drive_Base + \"training_results/Train_\"+ Sub_Train + \"_Valid_\" + Sub_Valid\n",
-        "!mkdir $trainPaht\n",
-        "trainPaht = trainPaht + '/' + datetime.strftime(now,'%Y-%m-%d_%H:%M:%S')\n",
-        "!mkdir $trainPaht\n",
-        "trainPaht = trainPaht + '/'\n",
+        "trainPath = Path_drive_Base + \"training_results/Train_\"+ Sub_Train + \"_Valid_\" + Sub_Valid\n",
+        "!mkdir $trainPath\n",
+        "trainPath = trainPath + '/' + datetime.strftime(now,'%Y-%m-%d_%H:%M:%S')\n",
+        "!mkdir $trainPath\n",
+        "trainPath = trainPath + '/'\n",
         "\n",
-        "statisticsPaht = Path_drive_Base + \"statistics/Train_\"+ Sub_Train + \"_Valid_\" + Sub_Valid\n",
-        "!mkdir $statisticsPaht\n",
-        "statisticsPaht = statisticsPaht + '/' + datetime.strftime(now,'%Y-%m-%d_%H:%M:%S')\n",
-        "!mkdir $statisticsPaht\n",
-        "statisticsPaht = statisticsPaht + '/'"
+        "statisticsPath = Path_drive_Base + \"statistics/Train_\"+ Sub_Train + \"_Valid_\" + Sub_Valid\n",
+        "!mkdir $statisticsPath\n",
+        "statisticsPath = statisticsPath + '/' + datetime.strftime(now,'%Y-%m-%d_%H:%M:%S')\n",
+        "!mkdir $statisticsPath\n",
+        "statisticsPath = statisticsPath + '/'"
       ],
-      "execution_count": 16,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "mkdir: cannot create directory ‘/content/drive/MyDrive/SRGAN/training_results/Train_01**_Valid_080*’: File exists\n",
+            "mkdir: cannot create directory ‘/content/drive/MyDrive/SRGAN/statistics/Train_01**_Valid_080*’: File exists\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -492,10 +464,22 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aOh9TfoMlzkU"
+        "id": "TDgDNUJ0GfJ0"
       },
       "source": [
-        ""
+        "! python train.py \\\n",
+        "  --num_epochs=5 \\\n",
+        "  --use_cuda=1 \\\n",
+        "  --batch_size=1 \\\n",
+        "  --snapshots_folder=$Path_snapshot \\\n",
+        "  --snapshots_Gan=$Gan_model \\\n",
+        "  --snapshots_Dis=$Dis_model \\\n",
+        "  --train_path=$Path_train \\\n",
+        "  --valid_path=$Path_valid \\\n",
+        "  --statistics=path $statisticsPath/ \\\n",
+        "  --epochs_path=$trainPath/ \\\n",
+        "  --willy_test=0 \\\n",
+        "  --do_resize=1"
       ],
       "execution_count": null,
       "outputs": []
@@ -503,7 +487,60 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TDgDNUJ0GfJ0"
+        "id": "woCKFvAcAggI",
+        "outputId": "ee38c725-1240-4a0f-ae31-5d0d1aa89f8f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "    print('$Path_snapshot:')\n",
+        "    print(Path_snapshot)\n",
+        "    print('$Gan_model')\n",
+        "    print(Gan_model)\n",
+        "    print('$Dis_model')\n",
+        "    print(Dis_model)\n",
+        "    print('$Path_train')\n",
+        "    print(Path_train)\n",
+        "    print('$Path_valid')\n",
+        "    print(Path_valid)\n",
+        "    print('$statisticsPath:')\n",
+        "    print(statisticsPath)\n",
+        "    print('$trainPath:')\n",
+        "    print(trainPath)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "$Path_snapshot:\n",
+            "/content/drive/MyDrive/SRGAN/snapshots/\n",
+            "$Gan_model\n",
+            "netG_epoch_8.pth\n",
+            "$Dis_model\n",
+            "netD_epoch_8.pth\n",
+            "$Path_train\n",
+            "/content/SRGAN_Test/data/DIV2K_train_01**/\n",
+            "$Path_valid\n",
+            "/content/SRGAN_Test/data/DIV2K_valid_080*/\n",
+            "$statisticsPath:\n",
+            "/content/drive/MyDrive/SRGAN/statistics/Train_01**_Valid_080*/2021-02-23_05:10:40/\n",
+            "$trainPath:\n",
+            "/content/drive/MyDrive/SRGAN/training_results/Train_01**_Valid_080*/2021-02-23_05:10:40/\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "74_6uz0y32Aw",
+        "outputId": "a96a3023-934b-4cb2-ea40-2933900128f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "! python train.py \\\n",
@@ -511,16 +548,41 @@
         "  --use_cuda 1 \\\n",
         "  --batch_size 1 \\\n",
         "  --snapshots_folder $Path_snapshot \\\n",
-        "  --snapshots_train_data Epoch_4_TrainTimes_240000.pth \\\n",
+        "  --snapshots_Gan $Gan_model \\\n",
+        "  --snapshots_Dis $Dis_model \\\n",
         "  --train_path $Path_train \\\n",
         "  --valid_path $Path_valid \\\n",
-        "  --statistics_path $statisticsPaht/ \\\n",
-        "  --epochs_path $traininPaht/ \\\n",
+        "  --statistics_path $statisticsPath/ \\\n",
+        "  --epochs_path $trainPath/ \\\n",
         "  --willy_test 0 \\\n",
         "  --do_resize 1"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "$Path_snapshot:\n",
+            "/content/drive/MyDrive/SRGAN/snapshots/\n",
+            "$Gan_model\n",
+            "netG_epoch_8.pth\n",
+            "$Dis_model\n",
+            "netD_epoch_8.pth\n",
+            "$Path_train\n",
+            "/content/SRGAN_Test/data/DIV2K_train_01**/\n",
+            "$Path_valid\n",
+            "/content/SRGAN_Test/data/DIV2K_valid_080*/\n",
+            "$statisticsPath:\n",
+            "/content/drive/MyDrive/SRGAN/statistics/Train_01**_Valid_080*/2021-02-23_05:10:40/\n",
+            "$traininPath:\n",
+            "/content/drive/MyDrive/SRGAN/training_results/Train_01**_Valid_080*/2021-02-23_05:10:40/\n",
+            "Downloading: \"https://download.pytorch.org/models/vgg16-397923af.pth\" to /root/.cache/torch/hub/checkpoints/vgg16-397923af.pth\n",
+            "100% 528M/528M [00:07<00:00, 74.7MB/s]\n",
+            "  0% 0/100 [00:00<?, ?it/s]"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
