--- a/SRGAN.ipynb
+++ b/SRGAN.ipynb
@@ -48,7 +48,7 @@
         "import sys\n",
         "import tensorflow as tf"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
         "# This will prompt for authorization.\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +229,7 @@
         "%cd SRGAN_Test/\n",
         "!pwd  "
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,7 +308,7 @@
         "Gan_model = 'netG_epoch_8.pth' \n",
         "Dis_model = 'netD_epoch_8.pth'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -319,17 +319,17 @@
       "source": [
         "!mkdir data"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "9ugt6-y3r9tR",
-        "outputId": "1f88d34a-f362-4372-d013-b5c29362f4d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1f88d34a-f362-4372-d013-b5c29362f4d5"
       },
       "source": [
         "Sub_Train = \"01**\" #@param {type:\"string\"}\n",
@@ -344,10 +344,7 @@
         "!mkdir $Path_valid\n",
         "\n",
         "Path_train = Path_train + \"/\"\n",
-        "!cp $Source_Train $Path_train\n",
-        "\n",
         "Path_valid = Path_valid + \"/\"\n",
-        "!cp $Source_Valid $Path_valid\n",
         "\n",
         "# Init Date time\n",
         "from datetime import datetime\n",
@@ -366,7 +363,7 @@
         "!mkdir $statisticsPath\n",
         "statisticsPath = statisticsPath + '/'"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,6 +374,18 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HYERynS4ERmP"
+      },
+      "source": [
+        "!cp $Source_Train $Path_train\n",
+        "!cp $Source_Valid $Path_valid"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -397,13 +406,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZC6CO2eeF0es"
+        "id": "ZC6CO2eeF0es",
+        "outputId": "5a13888c-9f19-4186-fa72-36115f8554cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!python -c \"import torch; print(torch.__version__)\""
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.4.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -419,13 +440,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Gunmjw5QLaPS"
+        "id": "Gunmjw5QLaPS",
+        "outputId": "1cfbf0ff-7840-4085-91a3-7b0735ba0840",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!pip install torchvision==0.7"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting torchvision==0.7\n",
+            "  Using cached https://files.pythonhosted.org/packages/8e/dc/4a939cfbd38398f4765f712576df21425241020bfccc200af76d19088533/torchvision-0.7.0-cp36-cp36m-manylinux1_x86_64.whl\n",
+            "Requirement already satisfied: torch==1.6.0 in /usr/local/lib/python3.6/dist-packages (from torchvision==0.7) (1.6.0)\n",
+            "Requirement already satisfied: pillow>=4.1.1 in /usr/local/lib/python3.6/dist-packages (from torchvision==0.7) (7.0.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from torchvision==0.7) (1.19.5)\n",
+            "Requirement already satisfied: future in /usr/local/lib/python3.6/dist-packages (from torch==1.6.0->torchvision==0.7) (0.16.0)\n",
+            "Installing collected packages: torchvision\n",
+            "  Found existing installation: torchvision 0.5.0\n",
+            "    Uninstalling torchvision-0.5.0:\n",
+            "      Successfully uninstalled torchvision-0.5.0\n",
+            "Successfully installed torchvision-0.7.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -434,17 +477,26 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1c3d9197-694a-410b-9cdc-d38c08fcb56d"
+        "outputId": "f8878262-3713-46eb-9578-b0c0f38bd808"
       },
       "source": [
         "!pip install torch==1.6"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: torch==1.4 in /usr/local/lib/python3.6/dist-packages (1.4.0)\n"
+            "Collecting torch==1.6\n",
+            "  Using cached https://files.pythonhosted.org/packages/38/53/914885a93a44b96c0dd1c36f36ff10afe341f091230aad68f7228d61db1e/torch-1.6.0-cp36-cp36m-manylinux1_x86_64.whl\n",
+            "Requirement already satisfied: future in /usr/local/lib/python3.6/dist-packages (from torch==1.6) (0.16.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from torch==1.6) (1.19.5)\n",
+            "\u001b[31mERROR: torchvision 0.5.0 has requirement torch==1.4.0, but you'll have torch 1.6.0 which is incompatible.\u001b[0m\n",
+            "Installing collected packages: torch\n",
+            "  Found existing installation: torch 1.4.0\n",
+            "    Uninstalling torch-1.4.0:\n",
+            "      Successfully uninstalled torch-1.4.0\n",
+            "Successfully installed torch-1.6.0\n"
           ],
           "name": "stdout"
         }
@@ -488,10 +540,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "woCKFvAcAggI",
-        "outputId": "ee38c725-1240-4a0f-ae31-5d0d1aa89f8f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2a827142-2455-4396-c635-2c20d7dadf96"
       },
       "source": [
         "    print('$Path_snapshot:')\n",
@@ -509,7 +561,7 @@
         "    print('$trainPath:')\n",
         "    print(trainPath)"
       ],
-      "execution_count": 7,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -525,9 +577,9 @@
             "$Path_valid\n",
             "/content/SRGAN_Test/data/DIV2K_valid_080*/\n",
             "$statisticsPath:\n",
-            "/content/drive/MyDrive/SRGAN/statistics/Train_01**_Valid_080*/2021-02-23_05:10:40/\n",
+            "/content/drive/MyDrive/SRGAN/statistics/Train_01**_Valid_080*/2021-02-23_06:55:27/\n",
             "$trainPath:\n",
-            "/content/drive/MyDrive/SRGAN/training_results/Train_01**_Valid_080*/2021-02-23_05:10:40/\n"
+            "/content/drive/MyDrive/SRGAN/training_results/Train_01**_Valid_080*/2021-02-23_06:55:27/\n"
           ],
           "name": "stdout"
         }
@@ -536,11 +588,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "74_6uz0y32Aw",
-        "outputId": "a96a3023-934b-4cb2-ea40-2933900128f4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "74_6uz0y32Aw"
       },
       "source": [
         "! python train.py \\\n",
@@ -558,31 +606,7 @@
         "  --do_resize 1"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "$Path_snapshot:\n",
-            "/content/drive/MyDrive/SRGAN/snapshots/\n",
-            "$Gan_model\n",
-            "netG_epoch_8.pth\n",
-            "$Dis_model\n",
-            "netD_epoch_8.pth\n",
-            "$Path_train\n",
-            "/content/SRGAN_Test/data/DIV2K_train_01**/\n",
-            "$Path_valid\n",
-            "/content/SRGAN_Test/data/DIV2K_valid_080*/\n",
-            "$statisticsPath:\n",
-            "/content/drive/MyDrive/SRGAN/statistics/Train_01**_Valid_080*/2021-02-23_05:10:40/\n",
-            "$traininPath:\n",
-            "/content/drive/MyDrive/SRGAN/training_results/Train_01**_Valid_080*/2021-02-23_05:10:40/\n",
-            "Downloading: \"https://download.pytorch.org/models/vgg16-397923af.pth\" to /root/.cache/torch/hub/checkpoints/vgg16-397923af.pth\n",
-            "100% 528M/528M [00:07<00:00, 74.7MB/s]\n",
-            "  0% 0/100 [00:00<?, ?it/s]"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
